# full-clock

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: build-release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src/components/: ExamModeDialog.vue  Settings.vue
src/store/: index.ts
